Fixed crafting status menu not displaying quantum computer correctly in obfuscated instances